--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="banner">
         <div class="banner-content">
           <h1 class="banner-title">Brand New Group of Architects</h1>
-          <p class="banner-description">
+          <p class="text-light-gray">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
@@ -42,9 +42,16 @@
           <img src="images/team4.png" alt="" />
         </div>
         <div class="teams-content">
-            <h3 class="teams-title"><span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
-            <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="btn-primary">Explore more</button>
+          <h3 class="teams-title">
+            <span class="quick-list text-light-gray">Quick list</span> <span>of Our</span>
+            <span class="text-features">Features</span>
+          </h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore more</button>
         </div>
       </section>
     </main>
